--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -323,20 +323,19 @@ ul#milestone-list {
           clear: both;
       }
 
-      &:after {
-          content: '';
+      .icon {
           position: absolute;
           top: 16px;
           left: -60px;
           width: 42px;
           height: 42px;
-          background-image: image-url('layouts/calendar-white.png');
-          background-size: 60%;
-          background-repeat: no-repeat;
-          background-position: 50%;
           border-radius: 50%;
           border: 6px $body-background solid;
           background-color: $alizarin;
+          color: white;
+          text-align: center;
+          line-height: 32px;
+          font-size: 16px;
       }
 
       h2{
