--- a/app/assets/stylesheets/_milestones.scss.erb
+++ b/app/assets/stylesheets/_milestones.scss.erb
@@ -43,11 +43,19 @@
         width: 80px;
         height: 80px;
         float: right;
-        padding: 15px;
+        //padding: 15px;
         border: solid 2px #34495E;
         border-radius: 50%;
+
         img {
             width: 100%;
+        }
+
+        .glyphicon {
+            font-size: 40px;
+            line-height: 76px;
+            display: block;
+            text-align: center;
         }
     }
 
