--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -43,8 +43,14 @@
           <%end%>
           </div>
 
+          <div class="row">
+            <div class="form-group col-xs-6">
+              <%=  f.label t('milestones.icon'), class: "control-label" %>
+              <button name="milestone[icon]" data-icon="<%= @milestone.icon %>" class="btn btn-default" role="iconpicker"></button>
+            </div>
+          </div>
 
-        <div class="row">
+          <div class="row">
 
           <div class="form-group col-xs-6">
             <%= f.label t('milestones.start_date'), class: "control-label" %>
