--- a/app/assets/javascripts/timeline.js.erb
+++ b/app/assets/javascripts/timeline.js.erb
@@ -24,5 +24,5 @@ var timeline_ready = function () {
     $(".toggle-documents, .notes-list").parent().children("h2").addClass("pointer");
 };
 
-$(document).ready(timeline_ready());
-$(document).on('page:load', timeline_ready());
+$(document).ready(timeline_ready);
+$(document).on('page:load', timeline_ready);
