--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= csrf_meta_tags %>
 
   </head>
-  <body class="<%= controller.controller_name %>">
+  <body data-no-turbolink class="<%= controller.controller_name %>">
     <% if navigation_bar_visible %>
       <header>
         <%= render 'layouts/navigation' %>
