--- a/app/assets/stylesheets/_milestones.scss.erb
+++ b/app/assets/stylesheets/_milestones.scss.erb
@@ -76,6 +76,14 @@
         width: 100%;
     }
 
+    .last-update{
+        clear:both;
+        color:#999999;
+        font-size:10px;
+        font-weight:bold;
+        padding-top:30px;
+        text-align:right;
+    }
 
 }
 
