--- a/app/views/milestones/new.html.erb
+++ b/app/views/milestones/new.html.erb
@@ -21,9 +21,8 @@
 
               <div class="row">
                 <div class="form-group col-xs-6">
-
                   <%=  m.label t('milestones.icon'), class: "control-label" %>
-                  <%=  m.text_area :icon, class: "form-control" %>
+                  <button name="milestone[icon]" class="btn btn-default" role="iconpicker"></button>
                 </div>
               </div>
 
