--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -19,9 +19,9 @@
           <%= f.label t('milestones.start_date'), class: "control-label" %>
           <div class="input-group">
             <%if @milestone.start_date==nil %>
-                <%= f.text_field :start_date, class: "form-control", id:'start_date' ,"data-provide":"datepicker", 'data-validation':'check_start_date','data-validation-format': "dd/mm/yyyy" %>
+                <%= f.text_field :start_date, class: "form-control", id:'start_date' ,"data-provide":"datepicker",'data-validation-format': "dd/mm/yyyy" %>
             <%else%>
-                <%= f.text_field :start_date, class: "form-control", id:'start_date' ,'value':l(@milestone.start_date), "data-provide":"datepicker", 'data-validation':'check_start_date', 'data-validation-format': "dd/mm/yyyy" %>
+                <%= f.text_field :start_date, class: "form-control", id:'start_date' ,'value':l(@milestone.start_date), "data-provide":"datepicker", 'data-validation-format': "dd/mm/yyyy" %>
             <%end%>
             <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div>
           </div>
@@ -58,3 +58,31 @@
     </div>
   </div>
 </div>
+
+
+<script>
+  // Add custom validation rule
+  $.formUtils.addValidator({
+    name : 'check_due_date',
+    validatorFunction : function() {
+      var due=document.getElementById('due_date').value;
+      if (due=='') return true;
+      var parts= due.split('/');
+      var due_year= parts[2];
+      var due_month= parts[1]-1;
+      var due_day= parts[0];
+      var due_date=new Date(due_year, due_month, due_day,23,59,59);
+      var start=document.getElementById('start_date').value;
+      var parts= start.split('/');
+      var start_year= parts[2];
+      var start_month= parts[1]-1;
+      var start_day= parts[0];
+      var start_date=new Date(start_year, start_month, start_day,23,59,59);
+      return (start=='' || start_date<=due_date);
+    },
+    errorMessage : '',
+    errorMessageKey: 'badDueDate'
+  });
+  // Setup form validation
+  $.validate();
+</script>
