--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="card-col col-xs-4 col-xs-offset-4">
+    <div class="card-col col-xs-5 col-xs-offset-2">
 
       <%= form_for :person, url: people_path, html: { class:'main-form','data-toggle': 'validator'} do |f| %>
           <h1><span class="glyphicon glyphicon-user"></span><%= t('people.new.header') %></h1>
@@ -43,7 +43,10 @@
                 <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div>
               </div>
             </div>
+          </div>
 
+          
+          <div class="row">
             <div class="form-group col-xs-6">
                 <%= f.label "Imagen", class: "control-label" %>
                 <%= f.cl_image_upload(:image_id, :crop => :fill, :width => 300, :height => 300) %>
