--- a/app/views/milestones/new.html.erb
+++ b/app/views/milestones/new.html.erb
@@ -70,7 +70,7 @@
                       <%= m.label t('milestones.cannot_assign')%>
                   <%else%>
                       <%= m.label t('milestones.assign_to'), class: "control-label" %>:<br>
-                      <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :multiple => true, class: "chzn-select", 'data-validation':"required", 'data-placeholder'=> t('milestones.select_people'), 'style'=> 'width:100%;') %>
+                      <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :required=>true, :multiple => true, class: "chzn-select", 'data-placeholder'=> t('milestones.select_people'), 'style'=> 'width:100%;') %>
                   <%end%>
                 </div>
               </div>
@@ -93,7 +93,6 @@ if ($('.category').find('option:selected').text()!='Feedback') {
     $('.feedback_autor').show();
 }
 </script>
-
 
 <script>
     // Add custom validation rule
