Edit de fechas arreglado

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -98,6 +98,13 @@
             search: false
         });
 
+
+        $("#timeline-card .editable, #milestone-info .editable").click(function(){
+            var obj = $(this);
+            obj.parent().find(".edit-form").show();
+            obj.hide();
+        });
+
     };
 
     $(document).ready(ready);
