--- a/app/assets/stylesheets/_milestones.scss.erb
+++ b/app/assets/stylesheets/_milestones.scss.erb
@@ -105,6 +105,7 @@
     font-weight:bold;
     color: #999999;
     float: right;
+    clear: both;
 }
 
 #milestone-notes {
@@ -172,6 +173,8 @@
                     display: block;
                 }
             }
+
+
         }
     }
 }
