--- a/app/views/milestones/_info.html.erb
+++ b/app/views/milestones/_info.html.erb
@@ -28,18 +28,52 @@
         end
     %></p>
 
-    <% if @milestone.start_date %>
-        <div class="calendar right">
-          <%= l(@milestone.start_date, format: "%A, %B %d %Y").capitalize %>
-        </div>
-    <% end %>
-    <% if @milestone.due_date %>
-        <div class="calendar">
-          <%= l(@milestone.due_date, format: "%A, %B %d %Y").capitalize %>
-        </div>
-    <% end %>
 
-    <%= @milestone.tags.count %>
+    <div class="date-row editable">
+        <% if @milestone.start_date %>
+            <div class="calendar right">
+              <%= l(@milestone.start_date, format: "%A, %B %d %Y").capitalize %>
+            </div>
+        <% end %>
+        <% if @milestone.due_date %>
+            <div class="calendar">
+              <%= l(@milestone.due_date, format: "%A, %B %d %Y").capitalize %>
+            </div>
+        <% end %>
+    </div>
+
+
+        <div class="row edit-form">
+
+          <%= form_for @milestone do |f| %>
+              <%= f.hidden_field :category_id %>
+
+          <div class="form-group col-xs-6">
+            <%= f.label t('milestones.start_date'), class: "control-label" %>
+            <div class="input-group">
+              <%= f.text_field :start_date, class: "form-control", id:'start_date' ,value:(@milestone.start_date ? l(@milestone.start_date) : nil), "data-provide":"datepicker", 'data-validation':'date', 'data-validation-format': "dd/mm/yyyy" %>
+              <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div>
+            </div>
+          </div>
+
+          <div class="form-group col-xs-6">
+            <%= f.label t('milestones.due_date'), class: "control-label" %>
+            <div class="input-group">
+              <%= f.text_field :due_date, class: "form-control" , id:'due_date',value:(@milestone.due_date ? l(@milestone.due_date) : nil) ,"data-provide":"datepicker", 'data-validation':'check_due_date', 'data-validation-format': "dd/mm/yyyy" %>
+              <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div>
+            </div>
+          </div>
+
+
+          <div class="btn pull-right">
+            <%= f.button t('milestones.edit.submit'),:type => 'submit', class: "btn btn-default" %>
+          </div>
+
+          <% end %>
+
+        </div>
+
+
     <% unless @milestone.tags.empty? %>
         <ul class="tags clearfix">
           <% @milestone.tags.each do |t| %>
@@ -53,11 +87,8 @@
     </div>
 
   </div>
-
-
 </div>
 <div >
-  <br>
   <h4><%= t('milestones.assigned_people') %></h4>
   <hr>
   <div id="milestone-asignees" class="row">
