Vista de mentores

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -105,6 +105,24 @@
             obj.hide();
         });
 
+        var ctrlDown = false;
+        const ctrlKey = 17;
+        const qKey = 81;
+
+        $(document).keydown(function(e)
+        {
+            if (e.keyCode == ctrlKey) ctrlDown = true;
+        }).keyup(function(e)
+        {
+            if (e.keyCode == ctrlKey) ctrlDown = false;
+        });
+
+        $(document).keydown(function(e)
+        {
+            if (ctrlDown && (e.keyCode == qKey))
+                $("#nav-search").focus();
+        });
+
     };
 
     $(document).ready(ready);
