--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -102,9 +102,19 @@ ul#mentors {
     li {
         display: inline-block;
         padding: 3px;
+        border-radius: 50%;
         img {
             width: 30px;
             border-radius: 50%;
+        }
+
+        &.plus {
+            background-color: white;
+            width: 30px;
+            height: 30px;
+            a {
+                color: $turqoise;
+            }
         }
     }
 }
