--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -26,6 +26,10 @@
                       <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
                       <span class="sr-only">(current)</span>
                   <% end %>
+                  <%= link_to dashboard_index_path  do %>
+                      <span class="glyphicon glyphicon-th" aria-hidden="true"></span>
+                      <span class="sr-only">(current)</span>
+                  <% end %>
                 </li>
             </ul>
 
