unificacion de los news de milestone

--- a/app/assets/stylesheets/_forms.scss.erb
+++ b/app/assets/stylesheets/_forms.scss.erb
@@ -30,7 +30,7 @@ form.main-form {
         }
     }
 
-    input {
+    input, textarea {
         border-radius: 0;
         box-shadow: none;
 
@@ -40,6 +40,9 @@ form.main-form {
 
             box-shadow: none;
         }
+    }
+    textarea{
+        resize: vertical;
     }
 
     .has-success, .has-error {
