--- a/app/views/milestones/index.html.erb
+++ b/app/views/milestones/index.html.erb
@@ -2,10 +2,11 @@
   <div class="row">
     <div class="col-xs-12">
       <div class="table-container">
-        <%= link_to '/milestones/new' do %>
-            <button type="button" id="btnNewtMilestone" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-plus"></span>  <%=t('milestones.new.header')%></button>
-        <%end%>
-        <h1><%= t('milestones.header') %></h1>
+        <h1>
+          <%= link_to new_milestone_path do%>
+              <span class='large-text glyphicon glyphicon-plus table-add-button pull-left'>  </span>
+          <% end %>
+          <%= t('milestones.header') %></h1>
         <table class="table datatable table-striped" id="hitos" data-info="false">
           <thead>
           <tr>
