--- a/app/assets/stylesheets/_general.scss.erb
+++ b/app/assets/stylesheets/_general.scss.erb
@@ -227,3 +227,13 @@ ul.tags {
     }
 }
 
+.image-preview {
+
+    img {
+        display: block;
+        margin: auto;
+    }
+
+    margin: 15px;
+}
+
