--- a/app/views/milestones/_form.html.erb
+++ b/app/views/milestones/_form.html.erb
@@ -1,5 +1,3 @@
-
-
 <%= form_for [@person, @person.milestones.build], html: { class:'timeline-form main-form slide-on-click clearfix','data-toggle': 'validator'}  do |m| %>
     <h1 class=""><span class="glyphicon glyphicon-check"></span> <%= t('milestones.new.header') %></h1>
     <div class="form-slide">
@@ -16,7 +14,7 @@
         <div class="row">
           <div class="form-group col-xs-6">
             <%=  m.label t('milestones.icon'), class: "control-label" %>
-            <button name="milestone[icon]" class="btn btn-default" role="iconpicker"></button>
+            <button name="milestone[icon]" class="btn btn-default" role="iconpicker" data-icon="glyphicon-flag"></button>
           </div>
         </div>
 
