--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -15,6 +15,8 @@
     <div class="row">
       <div class="card-col col-xs-5">
         <div id="milestone-notes">
+          <h4><%=t('notes.add')%>:</h4>
+          <hr>
           <%= render 'notes/form' %>
           <%= render 'notes' %>
         </div>
