--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -44,7 +44,22 @@
               </div>
             </div>
 
-            <div class="form-group col-xs-6">
+            <div class="row">
+              <div class="image-preview"></div>
+            </div>
+
+
+            <div class="row">
+              <div class="col-xs-12">
+                <div class="progress hidden">
+                  <div class="progress-bar" role="progressbar">
+                  </div>
+              </div>
+            </div>
+
+          </div>
+
+                        <div class="form-group col-xs-6">
                 <%= f.label "Imagen", class: "control-label" %>
                 <%= f.cl_image_upload(:image_id, :crop => :fill, :width => 300, :height => 300) %>
             </div>
