cambios dash y listar people

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -30,6 +30,12 @@
                       <span class="glyphicon glyphicon-th" aria-hidden="true"></span>
                       <span class="sr-only">(current)</span>
                   <% end %>
+                  <% if current_user_admin? %>
+                    <%= link_to '/people'  do %>
+                      <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                      <span class="sr-only">(current)</span>
+                    <% end %>
+                  <% end %>
                 </li>
             </ul>
 
