--- a/app/views/milestones/_innerform.erb
+++ b/app/views/milestones/_innerform.erb
@@ -10,7 +10,7 @@
 
       <div class="form-group">
         <%= m.label t('milestones.description'), class: "control-label" %>
-        <%= m.text_field :description, class: "form-control", 'data-validation':"required" %>
+        <%= m.text_area :description, class: "form-control", 'data-validation':"required" %>
       </div>
 
       <div class="row">
