--- a/app/views/milestones/_innerform.erb
+++ b/app/views/milestones/_innerform.erb
@@ -10,7 +10,7 @@
 
       <div class="form-group">
         <%= m.label t('milestones.description'), class: "control-label" %>
-        <%= m.text_field :description, class: "form-control", 'data-validation':"required" %>
+        <%= m.text_area :description, class: "form-control", 'data-validation':"required" %>
       </div>
 
       <div class="row">
@@ -37,7 +37,7 @@
         <div class="form-group col-xs-6">
           <%= m.label t('milestones.start_date'), class: "control-label" %>
           <div class="input-group">
-            <%= m.text_field :start_date, id: 'start_date', class: "form-control", "data-provide":"datepicker",'data-validation-format': "dd/mm/yyyy"%>
+            <%= m.text_field :start_date, id: 'start_date', class: "form-control", "data-provide":"datepicker",'data-validation-format':'date','data-validation-format': "dd/mm/yyyy"%>
             <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div>
           </div>
         </div>
