--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-12">
 
       <div class="table-container">
-        <h1><%= link_to new_project_path do%>
+        <h1><%= link_to new_project_path, method: :get do%>
               <span class='large-text glyphicon glyphicon-plus table-add-button pull-left'></span>
           <% end %>
           <%= t('project.index.header') %></h1>
