--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -52,7 +52,7 @@
                       <div class="form-group col-xs-6">
                         <%= f.label t('milestones.start_date'), class: "control-label" %>
                         <div class="input-group">
-                              <%= f.text_field :start_date, class: "form-control", id:'start_date' ,value:(@milestone.start_date ? l(@milestone.start_date) : nil), "data-provide":"datepicker", 'data-validation':'date', 'data-validation-format': "dd/mm/yyyy" %>
+                              <%= f.text_field :start_date, class: "form-control", id:'start_date' ,value:(@milestone.start_date ? l(@milestone.start_date) : nil), "data-provide":"datepicker", 'data-validation-format': "dd/mm/yyyy" %>
                           <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div>
                         </div>
                       </div>
